resolved div alignment bug, fixed mobile formatting, entering debug for flex order.

--- a/app/guid-file/styles.scss
+++ b/app/guid-file/styles.scss
@@ -37,10 +37,13 @@
 
 .FileDetail_main {
     height: 100%;
+    width: 100%;
+    padding-left: 0;
+    margin-left: 0;
     display: flex;
     flex-direction: column;
-    align-content: stretch;
-    justify-content: stretch;
+    align-content: flex-start;
+    justify-content: flex-start;
 }
 
 .FileDetail_project_link_div {
@@ -67,7 +70,7 @@
 
     &.Mobile {
         width: 100%;
-        // flex-wrap: nowrap;
+        flex-wrap: nowrap;
         overflow-x: hidden;
         overflow-y: hidden;
         white-space: nowrap;
